--- a/notebook/damage_simulation-Copy1.ipynb
+++ b/notebook/damage_simulation-Copy1.ipynb
@@ -1899,9 +1899,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ry38",
+   "display_name": "dell38",
    "language": "python",
-   "name": "ry38"
+   "name": "dell38"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1913,7 +1913,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.7"
+   "version": "3.8.6"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
