--- a/notebook/jump_interval_40_damages.ipynb
+++ b/notebook/jump_interval_40_damages.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "italian-republican",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +38,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fitting-facial",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +77,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "closed-aircraft",
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +104,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "three-attraction",
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +137,6 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "compact-oracle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +157,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "velvet-python",
    "metadata": {
     "code_folding": []
    },
@@ -231,7 +225,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "bronze-cooperative",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +239,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "steady-paragraph",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +262,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "collect-stake",
    "metadata": {
     "scrolled": true
    },
@@ -290,7 +281,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "focal-guidance",
    "metadata": {
     "scrolled": true
    },
@@ -320,7 +310,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "animated-bathroom",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +330,6 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "north-channel",
    "metadata": {
     "code_folding": [
      1
@@ -418,7 +406,6 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "graphic-climb",
    "metadata": {
     "scrolled": true
    },
@@ -519,7 +506,6 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "decreased-favorite",
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +535,6 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "substantial-share",
    "metadata": {
     "scrolled": true
    },
@@ -577,7 +562,6 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "photographic-nickel",
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +582,6 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "pending-martial",
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +607,6 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "fundamental-catering",
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +627,6 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "competitive-shadow",
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +652,6 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "changed-consortium",
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +721,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "third-version",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,7 +736,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "tracked-hollow",
    "metadata": {
     "code_folding": []
    },
@@ -776,7 +754,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "authentic-development",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,7 +765,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "electric-kazakhstan",
    "metadata": {
     "scrolled": false
    },
@@ -802,7 +778,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "endangered-auditor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -854,7 +829,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "architectural-andorra",
    "metadata": {
     "scrolled": true
    },
@@ -873,7 +847,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "interpreted-wallpaper",
    "metadata": {},
    "source": [
     "# Step 2: HJB"
@@ -882,7 +855,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "tracked-header",
    "metadata": {
     "code_folding": [
      16
@@ -1008,7 +980,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "wrong-college",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,7 +1001,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "according-therapist",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1046,7 +1016,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "settled-vehicle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1076,7 +1045,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "caroline-conservation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1088,7 +1056,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "inclusive-report",
    "metadata": {
     "code_folding": []
    },
@@ -1112,7 +1079,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "geographic-intermediate",
    "metadata": {
     "code_folding": [],
     "scrolled": true
@@ -1131,7 +1097,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "armed-growth",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1143,7 +1108,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "major-courage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1153,7 +1117,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ideal-routine",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1165,7 +1128,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "prerequisite-demographic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1214,7 +1176,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "atmospheric-penny",
    "metadata": {
     "scrolled": true
    },
@@ -1231,7 +1192,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "tamil-aberdeen",
    "metadata": {
     "code_folding": []
    },
@@ -1261,7 +1221,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "floral-place",
    "metadata": {
     "code_folding": []
    },
@@ -1291,7 +1250,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sealed-collectible",
    "metadata": {
     "code_folding": []
    },
@@ -1325,7 +1283,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "israeli-catering",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1352,7 +1309,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "behind-leone",
    "metadata": {
     "code_folding": [],
     "scrolled": false
@@ -1389,7 +1345,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "governing-familiar",
    "metadata": {
     "code_folding": [],
     "scrolled": false
@@ -1424,7 +1379,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "thermal-prototype",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1436,7 +1390,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "solved-memorabilia",
    "metadata": {
     "code_folding": []
    },
@@ -1502,7 +1455,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "indonesian-bolivia",
    "metadata": {
     "scrolled": false
    },
@@ -1514,7 +1466,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "executive-necessity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1556,7 +1507,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "golden-document",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1578,7 +1528,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "flying-metadata",
    "metadata": {
     "code_folding": []
    },
@@ -1800,7 +1749,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "handmade-ukraine",
    "metadata": {
     "code_folding": [],
     "scrolled": true
@@ -1819,7 +1767,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "successful-sword",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1829,7 +1776,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "massive-dining",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1852,7 +1798,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "above-business",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1895,7 +1840,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "embedded-stevens",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1916,7 +1860,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "chinese-planning",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1926,7 +1869,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "appreciated-internet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1937,7 +1879,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "copyrighted-street",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1958,7 +1899,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "virtual-oakland",
    "metadata": {
     "scrolled": false
    },
@@ -2005,7 +1945,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hourly-frame",
    "metadata": {
     "code_folding": [],
     "scrolled": false
@@ -2062,7 +2001,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "genetic-submission",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2072,7 +2010,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "powerful-ancient",
    "metadata": {
     "code_folding": [],
     "scrolled": false
@@ -2123,7 +2060,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "threatened-freeze",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2135,7 +2071,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "induced-toilet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2184,7 +2119,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "operational-rally",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2194,7 +2128,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "taken-shoulder",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2204,7 +2137,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "coupled-shoulder",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2220,7 +2152,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "chinese-button",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2232,7 +2163,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "endangered-egyptian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2244,7 +2174,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "conscious-candy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2256,7 +2185,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "outside-headset",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2270,7 +2198,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "persistent-worth",
    "metadata": {
     "code_folding": [],
     "scrolled": true
@@ -2326,7 +2253,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cloudy-shipping",
    "metadata": {
     "code_folding": [],
     "scrolled": false
@@ -2370,7 +2296,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "rolled-tomorrow",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2386,7 +2311,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "traditional-selection",
    "metadata": {
     "scrolled": false
    },
@@ -2417,9 +2341,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ry38",
+   "display_name": "dell38",
    "language": "python",
-   "name": "ry38"
+   "name": "dell38"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2431,7 +2355,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.7"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
