--- a/notebook/modifed_1d.ipynb
+++ b/notebook/modifed_1d.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "inner-guidance",
    "metadata": {
     "code_folding": []
    },
@@ -35,7 +34,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fossil-delivery",
    "metadata": {},
    "source": [
     "# BHmodified 1d\n",
@@ -86,7 +84,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "alpine-father",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +109,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "exciting-infrared",
    "metadata": {
     "code_folding": [
      1
@@ -170,7 +166,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "maritime-finger",
    "metadata": {},
    "outputs": [
     {
@@ -6465,7 +6460,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "pregnant-carol",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6484,7 +6478,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "lucky-coral",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6497,7 +6490,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "rolled-tower",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6523,7 +6515,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "applicable-variable",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6538,7 +6529,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "union-rogers",
    "metadata": {},
    "outputs": [
     {
@@ -6571,7 +6561,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "actual-modeling",
    "metadata": {},
    "outputs": [
     {
@@ -6606,7 +6595,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "automotive-overhead",
    "metadata": {
     "code_folding": [],
     "scrolled": true
@@ -6659,7 +6647,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "wanted-strike",
    "metadata": {
     "code_folding": []
    },
@@ -6709,7 +6696,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "independent-motel",
    "metadata": {},
    "source": [
     "## With hotelling constraint\n",
@@ -6757,7 +6743,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "linear-reference",
    "metadata": {
     "code_folding": []
    },
@@ -6776,7 +6761,6 @@
   {
    "cell_type": "code",
    "execution_count": 269,
-   "id": "cultural-mason",
    "metadata": {
     "code_folding": [
      1
@@ -6858,7 +6842,6 @@
   {
    "cell_type": "code",
    "execution_count": 261,
-   "id": "aquatic-section",
    "metadata": {},
    "outputs": [
     {
@@ -6884,7 +6867,6 @@
   {
    "cell_type": "code",
    "execution_count": 177,
-   "id": "pregnant-entrance",
    "metadata": {},
    "outputs": [
     {
@@ -6921,7 +6903,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "national-cookie",
    "metadata": {
     "scrolled": true
    },
@@ -7029,7 +7010,6 @@
   {
    "cell_type": "code",
    "execution_count": 202,
-   "id": "focused-legislation",
    "metadata": {
     "scrolled": true
    },
@@ -7066,9 +7046,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ry38",
+   "display_name": "dell38",
    "language": "python",
-   "name": "ry38"
+   "name": "dell38"
   },
   "language_info": {
    "codemirror_mode": {
@@ -7080,7 +7060,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.7"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
