clean some for macro annual

--- a/notebook/Untitled.ipynb
+++ b/notebook/Untitled.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 243,
-   "id": "blank-recognition",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +31,6 @@
   {
    "cell_type": "code",
    "execution_count": 248,
-   "id": "appropriate-discovery",
    "metadata": {
     "code_folding": []
    },
@@ -165,7 +163,6 @@
   {
    "cell_type": "code",
    "execution_count": 249,
-   "id": "coupled-header",
    "metadata": {
     "code_folding": [
      0
@@ -253,7 +250,6 @@
   {
    "cell_type": "code",
    "execution_count": 250,
-   "id": "enabling-nigeria",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +283,6 @@
   {
    "cell_type": "code",
    "execution_count": 251,
-   "id": "flying-xerox",
    "metadata": {
     "scrolled": true
    },
@@ -4653,7 +4648,6 @@
   {
    "cell_type": "code",
    "execution_count": 252,
-   "id": "systematic-knowing",
    "metadata": {
     "scrolled": true
    },
@@ -5744,7 +5738,6 @@
   {
    "cell_type": "code",
    "execution_count": 255,
-   "id": "prerequisite-suite",
    "metadata": {},
    "outputs": [
     {
@@ -5774,7 +5767,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "boxed-threshold",
    "metadata": {},
    "source": [
     "# Consider model ambiguity"
@@ -5783,7 +5775,6 @@
   {
    "cell_type": "code",
    "execution_count": 211,
-   "id": "constitutional-stretch",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5859,7 +5850,6 @@
   {
    "cell_type": "code",
    "execution_count": 212,
-   "id": "latest-lawrence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5879,7 +5869,6 @@
   {
    "cell_type": "code",
    "execution_count": 213,
-   "id": "selective-tattoo",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5895,7 +5884,6 @@
   {
    "cell_type": "code",
    "execution_count": 256,
-   "id": "jewish-ethiopia",
    "metadata": {},
    "outputs": [
     {
@@ -5917,7 +5905,6 @@
   {
    "cell_type": "code",
    "execution_count": 214,
-   "id": "rough-pitch",
    "metadata": {
     "scrolled": true
    },
@@ -12772,7 +12759,6 @@
   {
    "cell_type": "code",
    "execution_count": 220,
-   "id": "caroline-simple",
    "metadata": {},
    "outputs": [
     {
@@ -12803,7 +12789,6 @@
   {
    "cell_type": "code",
    "execution_count": 224,
-   "id": "advisory-import",
    "metadata": {},
    "outputs": [
     {
@@ -12834,7 +12819,6 @@
   {
    "cell_type": "code",
    "execution_count": 225,
-   "id": "swedish-fountain",
    "metadata": {},
    "outputs": [
     {
@@ -12864,7 +12848,6 @@
   {
    "cell_type": "code",
    "execution_count": 242,
-   "id": "excess-cherry",
    "metadata": {},
    "outputs": [
     {
@@ -12892,7 +12875,6 @@
   {
    "cell_type": "code",
    "execution_count": 233,
-   "id": "conditional-delhi",
    "metadata": {
     "scrolled": true
    },
@@ -13985,7 +13967,6 @@
   {
    "cell_type": "code",
    "execution_count": 227,
-   "id": "composed-patrol",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14027,7 +14008,6 @@
   {
    "cell_type": "code",
    "execution_count": 234,
-   "id": "junior-special",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14038,7 +14018,6 @@
   {
    "cell_type": "code",
    "execution_count": 229,
-   "id": "written-visibility",
    "metadata": {
     "scrolled": true
    },
@@ -16192,7 +16171,6 @@
   {
    "cell_type": "code",
    "execution_count": 235,
-   "id": "affected-xerox",
    "metadata": {},
    "outputs": [
     {
@@ -16221,7 +16199,6 @@
   {
    "cell_type": "code",
    "execution_count": 236,
-   "id": "selected-evidence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16232,7 +16209,6 @@
   {
    "cell_type": "code",
    "execution_count": 237,
-   "id": "spoken-genetics",
    "metadata": {},
    "outputs": [
     {
@@ -16261,9 +16237,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ry38",
+   "display_name": "dell38",
    "language": "python",
-   "name": "ry38"
+   "name": "dell38"
   },
   "language_info": {
    "codemirror_mode": {
@@ -16275,7 +16251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.7"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
