update damage functiona and intensity function

--- a/sec1_Introduction.ipynb
+++ b/sec1_Introduction.ipynb
@@ -33,7 +33,10 @@
     "\n",
     "\n",
     "\n",
-    "This paper extends previous work by \"opening the hood\" of climate change uncertainty and exploring which components have the biggest impact on valuation.  To simplify the policy analysis, we consider a world with a \"fictitious social planner\". Thus, we put to the side important questions pertaining to heterogeneity in the  exposure to climate change and to the consequent policy objectives by different decision makers.   Instead, we simplify the policy implementation to that of a Pigouvian tax that eliminates the wedge between market valuation and social valuation.  We use this setup to illustrate how uncertainty can contribute to social valuation while recognizing the need for further model richness is future research.  Our planner confronts risk, model ambiguity, and model misspecification formally and deduces a socially efficient emissions trajectory.\n"
+    "Finally, this paper extends previous work by \"opening the hood\" of climate change uncertainty and exploring which components have the biggest impact on valuation.  Rather than embrace a \"one-model-fits-all-type-of-approaches\" perspective, we give three computational examples designed to illustrate different points.\n",
+    "The example presented in section \\ref{sec: IllustrativeEconomy} is by far the most ambitious and sets the stage for the other two.  This first example explores what impact of future information about environmental and economic damages, triggered by temperature anomaly thresholds,  should have on current policy.  It adds a dynamic richness missing from other treatments of model uncertainty.  The second example,  presented in section \\ref{sec:uncertain_decompose},  implements a novel decomposition of uncertainty assessing the relative importance of uncertainties in carbon dynamics, temperature dynamics and damage function uncertainty.  The approach that is described and implemented in section \\ref{sec:uncertain_decompose} is more generally applicable to other economic environments.   Finally, the third example investigates the  interacting implications of the uncertainties in the development of green technologies and in environmental damages  for prudent policy.  This example is developed  in Section \\ref{sec:abate}. \n",
+    "\n",
+    "In the next section, we elaborate on some the prior contributions that motivate our analysis.  \n"
    ]
   },
   {
@@ -49,9 +52,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ry38",
-   "language": "python",
-   "name": "ry38"
+   "name": "python3",
+   "display_name": "Python 3.8.6 64-bit ('dell38': pyenv)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -63,7 +65,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.7"
+   "version": "3.8.6"
+  },
+  "interpreter": {
+   "hash": "d0d76abfdbb0076f7950f4feef2921e737fada20a629e84883a54ca9388c8f4e"
   }
  },
  "nbformat": 4,
