--- a/sec8_UncertaintyDecomposition.ipynb
+++ b/sec8_UncertaintyDecomposition.ipynb
@@ -4998,9 +4998,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ry38",
+   "display_name": "dell38",
    "language": "python",
-   "name": "ry38"
+   "name": "dell38"
   },
   "language_info": {
    "codemirror_mode": {
@@ -5012,7 +5012,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.7"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
