--- a/sec5_UncertaintyAversion.ipynb
+++ b/sec5_UncertaintyAversion.ipynb
@@ -151,9 +151,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "dell38",
    "language": "python",
-   "name": "python3"
+   "name": "dell38"
   },
   "language_info": {
    "codemirror_mode": {
