--- a/sec1_Introduction.ipynb
+++ b/sec1_Introduction.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "uniform-homework",
    "metadata": {},
    "source": [
     "# 1 Introduction\n",
@@ -41,7 +40,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "indie-vision",
    "metadata": {},
    "source": [
     "**To next section:**\n",
@@ -51,9 +49,13 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "d0d76abfdbb0076f7950f4feef2921e737fada20a629e84883a54ca9388c8f4e"
+  },
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.6 64-bit ('dell38': pyenv)"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -66,9 +68,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.6"
-  },
-  "interpreter": {
-   "hash": "d0d76abfdbb0076f7950f4feef2921e737fada20a629e84883a54ca9388c8f4e"
   }
  },
  "nbformat": 4,
