--- a/sec6_IllustrativeEconIII.ipynb
+++ b/sec6_IllustrativeEconIII.ipynb
@@ -158,7 +158,6 @@
    "outputs": [],
    "source": [
     "!python \"model_final_5.py\"\n",
-    "\n",
     "!python \"model_final_7p5.py\"\n",
     "!python \"model_final_2p5.py\"\n",
     "!python \"model_final_baseline.py\""
@@ -3954,9 +3953,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dell38",
+   "display_name": "macro-ann",
    "language": "python",
-   "name": "dell38"
+   "name": "macro-ann"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3968,7 +3967,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
