--- a/climateuncertaintyspilloverbook/sec6_IllustrativeEconIII.ipynb
+++ b/climateuncertaintyspilloverbook/sec6_IllustrativeEconIII.ipynb
@@ -8,7 +8,14 @@
     "\n",
     "While the model posed in section [4](sec4_IllustrativeEconI.ipynb) illustrated how the unfolding of damages should alter policy, the economic model was not designed to confront transitions to fully carbon-neutral economies.  There have been several calls for such transitions with little regard for the role or impact of uncertainty.  We now modify the model to allow for green technology in decades to come.  \n",
     "\n",
-    "We next consider a technology that is close to the Dynamic Integrated Climate-Economy (DICE) model  of \\cite{Nordhaus:2017}. See also \\cite{CaiJuddLontzek:2017} and \\cite{CaiLontzek:2019} for a stochastic extension (DSICE)  of the DICE model.\\footnote{Among other stochastic components, the DSICE incorporates tipping elements and characterizes the SCC as a stochastic process. From a decision theory perspective, DSICE focuses on risk aversion and intertemporal substitution under an assumption of rational expectations.}  For our setting, we alter the output equation from our previous specification as follows:\n",
+    "We next consider a technology that is close to the Dynamic Integrated Climate-Economy (DICE) model  of {cite:t}`Nordhaus:2017`. See also {cite:t}`CaiJuddLontzek:2017` and {cite:t}`CaiLontzek:2019` for a stochastic extension (DSICE)  of the DICE model.\n",
+    "\n",
+    "```{note}\n",
+    ":class: dropdown\n",
+    "Among other stochastic components, the DSICE incorporates tipping elements and characterizes the SCC as a stochastic process. From a decision theory perspective, DSICE focuses on risk aversion and intertemporal substitution under an assumption of rational expectations.\n",
+    "```\n",
+    "\n",
+    "For our setting, we alter the output equation from our previous specification as follows:\n",
     "\n",
     "$$\n",
     "\\frac {I_t}{K_t} + \\frac {C_t} {K_t}  + \\frac {J_t} {K_t}  = \\alpha \n",
@@ -18,20 +25,19 @@
     "where:\n",
     "\n",
     "$$\n",
-    "\\begin{equation}\n",
+    "\\begin{equation}\\label{(12)}\\tag{12}\n",
     " \\frac {J_t} {K_t} =   \\left\\{ \\begin{matrix}   \\alpha {\\vartheta_t}  \\left[ 1  -  \\left({\\frac {{\\mathcal E}_t} { \\alpha \\lambda_t K_t}}\\right)\\right]^\\theta & \\left({\\frac {{\\mathcal E}_t} {\\alpha  K_t}}\\right)  \\le \\lambda_t \\cr\n",
     "0 & \\left({\\frac {{\\mathcal E}_t} {\\alpha  K_t}}\\right)  \\ge \\lambda_t  \\end{matrix} \\right.\n",
     "\\end{equation}\n",
     "$$\n",
     "\n",
-    "To motivate the term $J_t$, \n",
-    "express the emissions to capital ratio as:\n",
+    "To motivate the term $J_t$, express the emissions to capital ratio as:\n",
     "\n",
     "$$\n",
     "\\frac {{\\mathcal E}_t} {K_t}  = \\alpha \\lambda_t  ( 1 - \\iota_t ) \n",
     "$$\n",
     "\n",
-    "where $0 \\le \\iota_t \\le 1$ is {\\em abatement}  at date $t$. The exogenously specified \n",
+    "where $0 \\le \\iota_t \\le 1$ is *abatement*  at date $t$. The exogenously specified \n",
     "process $\\lambda$ gives the emissions to output ratio in the absence of  any abatement.  \n",
     "By investing in $\\iota_t$,  this ratio can be reduced, but there is a corresponding reduction in output.  Specifically, the output loss is given by:\n",
     "\n",
@@ -39,19 +45,22 @@
     "J_t  = \\alpha K_t \\vartheta (\\iota_t)^\\theta \n",
     "$$\n",
     "\n",
-    "Equation \\eqref{output_loss} follows by solving for abatement $\\iota_t$ in terms of emissions.\\footnote{\n",
-    "The link to the specification used in \\cite{CaiLontzek:2019} is then:\n",
+    "Equation (12) follows by solving for abatement $\\iota_t$ in terms of emissions.\n",
+    "\n",
+    "```{note}\n",
+    ":class: dropdown\n",
+    "The link to the specification used in {cite:t}`CaiLontzek:2019` is then:\n",
     "\n",
     "$$\n",
     "\\begin{align*}\n",
     "\\sigma_t & = \\lambda_t \\cr\n",
     "\\vartheta_t & = \\theta_{\n",
-    "In [ ]:\n",
     "1,t} \\cr\n",
     "\\theta & = \\theta_2 \\cr\n",
     "\\mu_t & = \\iota_t \n",
     "\\end{align*}\n",
     "$$\n",
+    "```\n",
     "\n",
     "The planner's preferences are logarithmic over damaged consumption:\n",
     "\n",
@@ -65,8 +74,7 @@
     "\n",
     "## HJB, post damage jump value functions\n",
     "\n",
-    "Controls: $(i, e)$ where $i$ is a potential value for $\\frac {I_t} {K_t}$ and $e$ is a realization of ${\\mathcal E}_t$.  States are $(k, d, y)$ where \n",
-    "$k$ is a realization of $\\log K_t$, $d$ is a realization of $\\log D_t$, and $y$ is the temperature anomaly.  Guess a value function of the form:\n",
+    "Controls: $(i, e)$ where $i$ is a potential value for $\\frac {I_t} {K_t}$ and $e$ is a realization of ${\\mathcal E}_t$.  States are $(k, d, y)$ where $k$ is a realization of $\\log K_t$, $d$ is a realization of $\\log D_t$, and $y$ is the temperature anomaly.  Guess a value function of the form: \n",
     "$\\upsilon_d d + \\Phi^m(k,y)$.  \n",
     "\n",
     "$$\n",
@@ -98,6 +106,7 @@
     "$$\n",
     "\n",
     "Given $mc$, the first-order conditions for $i$ are affine.  \n",
+    "\n",
     "First-order conditions for $e$:\n",
     "\n",
     "$$\n",
@@ -154,20 +163,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Iteration 1: LHS Error: 8.148102779159672e-07; RHS Error 7.887498911784974e-07\n",
-      "\u001b[0m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#!python \"model_final_5.py\"\n",
     "#!python \"model_final_7p5.py\"\n",
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -343,10 +343,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fc97faba9a0>"
+       "<IPython.lib.display.IFrame at 0x7fc1dcaa24c0>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,19 +370,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'distorted_damage_probs' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-a8c43044d578>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplots\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mplot15\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mplot15\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mθ\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mγ_3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdistorted_damage_probs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mπct\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite_html\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'plot15.html'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mIFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msrc\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0;34m'plot15.html'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwidth\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m700\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m500\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'distorted_damage_probs' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"700\"\n",
+       "            height=\"500\"\n",
+       "            src=\"plot15.html\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7fc1e0842eb0>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
