--- a/climateuncertaintyspilloverbook/sec3_UncertainDamage.ipynb
+++ b/climateuncertaintyspilloverbook/sec3_UncertainDamage.ipynb
@@ -14,9 +14,9 @@
     "## Damage functions\n",
     "\n",
     "For purposes of illustration, we introduce  explicitly stochastic models of damages.  The specification includes an unknown threshold whereby the curvature becomes apparent.  In some of our computations, this threshold occurs somewhere between 1.5 and 2 degrees Celsius, but we also explore what happens when this interval is shifted to the right, 1.75 and 2.25 degress Celsius in our illustration.  Under a baseline specification, damage function curvature is realized in accordance with a Poisson event and an intensity that depends on the temperature anomaly.  The event is more likely to be revealed in the near future when the temperature anomaly is larger.  While we adopt a probabilistic formulation as a baseline, we will entertain ambiguity over damage function curvature and potential misspecification of the Poisson intensity.  We intend our specification of the damage function to reflect that the value of future empiricism in the near term will be limited as the climate-economic system is pushed into uncharted territory.  On the other hand, we allow for the damage function steepness to be revealed in the future as the climate system moves potentially closer to an environmental tipping point.  \n",
-    "Our construction of potential damage functions is similar to \\citeauthor{BarnettBrockHansen:2020} with specifications motivated in part by prior contributions.\n",
+    "Our construction of potential damage functions is similar to {cite:t}`BarnettBrockHansen:2020` with specifications motivated in part by prior contributions.\n",
     "\n",
-    "We posit a damage process, $N_t = \\{ N_t : t\\ge 0\\}$ to capture negative externalities on society imposed by carbon emissions.  The reciprocal of damages, ${\\frac 1 {N_t}}$,  diminishes the  productive capacity of the economy because of the impact of climate change.  We follow much of climate economics literature by presuming that the process $N$  reflects, in part,  the outcome of a damage function evaluated at the  temperature anomaly process. Importantly, we use a family of damage functions in place of a single function. Our construction of the alternative damage functions is similar to \\citeauthor{BarnettBrockHansen:2020} with specifications motivated in part by prior contributions.  Importantly, we modify their damage specifications in three ways:\n",
+    "We posit a damage process, $N_t = \\{ N_t : t\\ge 0\\}$ to capture negative externalities on society imposed by carbon emissions.  The reciprocal of damages, ${\\frac 1 {N_t}}$,  diminishes the  productive capacity of the economy because of the impact of climate change.  We follow much of climate economics literature by presuming that the process $N$  reflects, in part,  the outcome of a damage function evaluated at the  temperature anomaly process. Importantly, we use a family of damage functions in place of a single function. Our construction of the alternative damage functions is similar to {cite:t}`BarnettBrockHansen:2020` with specifications motivated in part by prior contributions.  Importantly, we modify their damage specifications in three ways:\n",
     "\n",
     "- we entertain more damage functions, including ones  that are more extreme;\n",
     "\n",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
       "text/html": [
        "\n",
        "        <iframe\n",
-       "            width=\"1035\"\n",
+       "            width=\"1090\"\n",
        "            height=\"500\"\n",
        "            src=\"plot4.html\"\n",
        "            frameborder=\"0\"\n",
@@ -86,10 +86,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fcb673888e0>"
+       "<IPython.lib.display.IFrame at 0x7fb11f0e4640>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +98,7 @@
     "from src.plots import plot4, plot3\n",
     "from IPython.display import IFrame\n",
     "plot4().write_html('plot4.html')\n",
-    "IFrame(src ='plot4.html', width=1035, height=500)\n"
+    "IFrame(src ='plot4.html', width=1090, height=500)\n"
    ]
   },
   {
@@ -108,7 +108,9 @@
     "## Intensity function\n",
     "\n",
     "The intensity function, ${\\mathcal J}$,  determines the possibility of a jump over the next small increment in time.  For $Y_t = y$, $\\epsilon \\mathcal J (y)$ is the approximate jump probability over small time increment $\\epsilon$.  Equivalently,  ${\\mathcal J}$ is a local measure of probability per unit of time.  \n",
+    "\n",
     "In our computations,  we use intensity function \n",
+    "\n",
     "\n",
     "$$\n",
     "{\\mathcal J}(y) = \\left\\{ \\begin{matrix} {\\sf r}_1 \\left( \\exp \\left[ {\\frac {{\\sf r}_2}  2} (y -{\\underline y})^2\\right] - 1 \\right) & y \\ge {\\underline y} \\cr\n",
@@ -156,15 +158,6 @@
     "from IPython.display import IFrame\n",
     "plot3().write_html('plot3.html')\n",
     "IFrame(src ='plot3.html', width=1000, height=600)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Next section:**\n",
-    "\n",
-    "[Section 4: Illustrative economy I, uncertain damages](sec4_IllustrativeEconI.ipynb)"
    ]
   }
  ],
